fix dot nav alignment

--- a/styles/demo.module.css
+++ b/styles/demo.module.css
@@ -49,6 +49,10 @@
 	border-radius: 50%;
 	opacity: 0.5;
 	transition: opacity 0.3s ease;
+	line-height: 0;
+	display: block;
+	appearance: none;
+	-webkit-appearance: none;
 }
 
 .arrowBtn:hover {
@@ -73,19 +77,25 @@
 	position: absolute;
 	left: 50%;
 	bottom: 5%;
+	transform: translateX(-50%);
 	display: flex;
-	column-gap: 0.5rem;
+	column-gap: 0.75rem;
 	z-index: 3;
 }
 
 .dot {
-	width: 0.75rem;
-	height: 0.75rem;
+	width: 0.6rem;
+	height: 0.6rem;
 	background: black;
+	display: inline-block;
+	line-height: 0;
+	padding: 0;
 	border: none;
 	border-radius: 50%;
 	opacity: 0.25;
 	transition: opacity 0.3s ease;
+	appearance: none;
+	-webkit-appearance: none;
 }
 
 .dot:hover {
@@ -93,6 +103,14 @@
 	opacity: 1;
 }
 
-.active {
+.dot.active {
 	opacity: 1;
+}
+
+/* Tablet */
+@media (width >= 768px) {
+	.dot {
+		width: 0.75rem;
+		height: 0.75rem;
+	}
 }
